Moved httpclient classes to core